Added feature "memory zone" to ZRCP and all menus that inspect memory (debug, disassemble, sprites etc): now you can look at all memory zones, for example: full 128kb ram, 64kb rom of +2A, divmmc ram, etc
Added boot logo
Added Antonio Villena's "Kartusho" cartridge interface

Moved folders: docs, media, snap_tests to a "ZEsarUX-extras" package. These folders have been separated from the emulator main distributed file, and the main download have been reduced to 5 MB aprox. The git repository still holds all the files (extras have been moved to folder "extras"), but maybe in the future I will remove them also from the repo.
Moved mmc/ide files location to extras/media/disk_images folder

Improved menu interface:
*menu gui is zoomed when running following machines: QL, TSConf, CPC, Prism, Sam
*menu movement with mouse
*colours are greyscaled when multitask disabled
*allow blinking text, like the input cursor (needs multitask on)
*new splash window type which disappears automatically (needs multitask on). Used only on change memory zones from debug cpu menu, but it will be used on more places probably

Improved debugger:
*you can now set conditions for all flags, written as: FS,FZ,FP,FV,FH,FN,FC
*now you can set breakpoints from command line/config file but not enabled by default. You need --enable-breakpoints setting
*now the multitask setting is not lost when a breakpoint is fired
*now you can repeat last command by pressing enter on ZRCP (requires enabling a debug-setting)

Improved QL emulation: experimental support of LBYTES command, added QL root directory selector for mdv1, mdv2, flp1
Improved Sprite Viewer: Save sprite, TBBlue sprite viewer, inverse sprite, set bpp (8,4,2,1), set palette
Improved stdout driver. Now can show ansi colours
Improved messages windows. Can now find text using f and n