@@ -62,5 +62,7 @@ extern void load_z80_snapshot(char *archivo);
 
 extern void snapshot_quick_save(char *nombre);
 
+extern z80_bit sna_setting_no_change_machine;
+
 
 #endif
