@@ -21,6 +21,7 @@ Added ESXDOS handler so file operations can be done with files stored on your co
 Added feature "memory zone" to ZRCP and all menus that inspect memory (debug, disassemble, sprites etc): now you can look at all memory zones, for example: full 128kb ram, 64kb rom of +2A, divmmc ram, etc
 Added boot logo
 Added Antonio Villena's "Kartusho" cartridge interface
+Added setting to allow to load a .sna snapshot file without changing the current machine type
 
 Moved folders: docs, media, snap_tests to a "ZEsarUX-extras" package. These folders have been separated from the emulator main distributed file, and the main download have been reduced to 5 MB aprox. The git repository still holds all the files (extras have been moved to folder "extras"), but maybe in the future I will remove them also from the repo.
 Moved mmc/ide files location to extras/media/disk_images folder
